--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
 [3] onad | 20200326 | Update x_base.html and other templates to suit screens draft
 [9] onad | 20200401 | Protected/secured views
 [10] onad | 20200401 | Bootstrap4 forms
+[11] onad | 20200514 | Fix Bootstrap error when app runs in other pc & remove side navbar
+
 -->
 <head>
     <meta charset="utf-8">
@@ -17,8 +19,8 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/sticky-footer-navbar/">
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static 'assets/bootstrap/4.4.1/css/bootstrap.min.css' %}" rel="stylesheet"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="{% static 'assets/bootstrap/4.4.1/css/bootstrap.min.css' %}" rel="stylesheet">
+    <!--    [11]-->
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/apple-touch-icon.png"
@@ -55,11 +57,11 @@
 
       {% endblock %}
 
+
     </style>
     <!-- Custom styles for this template -->
     <link href="{% static 'assets/css/default.css' %}" rel="stylesheet">
 </head>
-
 
 
 <body class="d-flex flex-column h-100">
@@ -132,128 +134,44 @@
 </header>
 
 
-
 <!-- Page Content (User not authenticated) / Page Content & Sidebar (User authenticated) -->
 {% if user.is_authenticated %}
+<!--[11]-->
 
-<div class="container-fluid">
-    <div class="row">
+<main role="main" class="flex-shrink-0">
+    <div class="container">
 
-        {% block sidebar %}
-        <nav class="sidebar col-md-2 d-none d-md-block bg-light mt-5">
-            <div class="sidebar-sticky">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">
-                            <span data-feather="home"></span>
-                            Dashboard <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file"></span>
-                            Orders
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="shopping-cart"></span>
-                            Products
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="users"></span>
-                            Customers
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="bar-chart-2"></span>
-                            Reports
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="layers"></span>
-                            Integrations
-                        </a>
-                    </li>
-                </ul>
-
-                <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                    <span>Saved reports</span>
-                    <a class="d-flex align-items-center text-muted" href="#" aria-label="Add a new report">
-                        <span data-feather="plus-circle"></span>
-                    </a>
-                </h6>
-                <ul class="nav flex-column mb-2">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file-text"></span>
-                            Current month
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file-text"></span>
-                            Last quarter
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file-text"></span>
-                            Social engagement
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file-text"></span>
-                            Year-end sale
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        {% block content_authenticated %}
+        <h1 class="mt-5">Sticky footer with fixed navbar</h1>
+        <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and
+            CSS. A
+            fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>main &gt;
+                .container</code>.
+        </p>
+        <p>Back to <a href="https://getbootstrap.com/docs/4.4/examples/sticky-footer/">the default sticky
+            footer</a>
+            minus the navbar.</p>
         {% endblock %}
 
-        <!-- Begin page content -->
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <div class="container">
-
-                {% block content_authenticated %}
-                <h1 class="mt-5">Sticky footer with fixed navbar</h1>
-                <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and
-                    CSS. A
-                    fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>main &gt;
-                        .container</code>.
-                </p>
-                <p>Back to <a href="https://getbootstrap.com/docs/4.4/examples/sticky-footer/">the default sticky
-                    footer</a>
-                    minus the navbar.</p>
-                {% endblock %}
-
-            </div>
-        </main>
     </div>
-</div>
+</main>
 
-    {% else %}
-    <main role="main" class="flex-shrink-0">
-        <div class="container">
+{% else %}
+<main role="main" class="flex-shrink-0">
+    <div class="container">
 
-            {% block content %}
-            <h1 class="mt-5">Sticky footer with fixed navbar</h1>
-            <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A
-                fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>main &gt; .container</code>.
-            </p>
-            <p>Back to <a href="https://getbootstrap.com/docs/4.4/examples/sticky-footer/">the default sticky footer</a>
-                minus the navbar.</p>
-            {% endblock %}
+        {% block content %}
+        <h1 class="mt-5">Sticky footer with fixed navbar</h1>
+        <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A
+            fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>main &gt; .container</code>.
+        </p>
+        <p>Back to <a href="https://getbootstrap.com/docs/4.4/examples/sticky-footer/">the default sticky footer</a>
+            minus the navbar.</p>
+        {% endblock %}
 
-        </div>
-    </main>
-    {% endif %}
+    </div>
+</main>
+{% endif %}
 
 <footer class="footer fixed-bottom flex-md-nowrap mt-auto p-2">
     <div class="container col-12 text-center">
@@ -272,10 +190,10 @@
 <script>
     window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')
 
+
 </script>
-<script src="{% static 'assets/bootstrap/4.4.1/js/bootstrap.bundle.min.js' %}"
-        integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
-        crossorigin="anonymous"></script>
+<script src="{% static 'assets/bootstrap/4.4.1/js/bootstrap.bundle.min.js' %}"></script>
+<!--[11]-->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
